Bug 241536 - REGRESSION (r290875): [iOS] Safari renders many blank tiles after navigating back to webpage from PDF
Summary: REGRESSION (r290875): [iOS] Safari renders many blank tiles after navigating ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Page Loading (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-11 21:47 PDT by Wenson Hsieh
Modified: 2022-06-12 19:40 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2022-06-11 21:47:17 PDT
rdar://94637323
Comment 1 Wenson Hsieh 2022-06-11 21:50:39 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1463
Comment 2 EWS 2022-06-12 19:40:51 PDT
Committed r295479 (251484@main): <https://commits.webkit.org/251484@main>

Reviewed commits have been landed. Closing PR #1463 and removing active labels.