Tools/TestWebKitAPI/Tests/ios/ApplicationStateTracking.mm
@@ -27,7 +27,13 @@
 
 #if PLATFORM(IOS_FAMILY)
 
+#import "ClassMethodSwizzler.h"
+#import "PlatformUtilities.h"
+#import "TestNavigationDelegate.h"
+#import "TestPDFHostViewController.h"
+#import "TestProtocol.h"
 #import "TestWKWebView.h"
+#import "WKWebViewConfigurationExtras.h"
 
 namespace TestWebKitAPI {
 
@@ -58,6 +64,36 @@ TEST(ApplicationStateTracking, WindowDeallocDoesNotPermanentlyFreezeLayerTree)
     [webView synchronouslyLoadHTMLString:@"<body>Bar</body>"];
     [webView waitForNextPresentationUpdate];
 }
+
+#if HAVE(PDFKIT)
+
+TEST(ApplicationStateTracking, NavigatingFromPDFDoesNotLeaveWebViewInactive)
+{
+    RetainPtr configuration = [WKWebViewConfiguration _test_configurationWithTestPlugInClassName:@"WebProcessPlugInWithInternals" configureJSCForTesting:YES];
+
+    auto pdfHostViewControllerSwizzler = createPDFHostViewControllerSwizzler();
+    auto webView = adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 320, 568) configuration:configuration.get()]);
+    auto delegate = adoptNS([TestNavigationDelegate new]);
+    [webView setNavigationDelegate:delegate.get()];
+
+    [webView loadSimulatedRequest:[NSURLRequest requestWithURL:[NSURL URLWithString:@"https://foo.com"]] responseHTMLString:@"<body>Hello world</body>"];
+    [delegate waitForDidFinishNavigation];
+    [webView waitForNextPresentationUpdate];
+
+    RetainPtr fakeURL = [NSURL URLWithString:@"https://bar.com"];
+    RetainPtr pdfData = [NSData dataWithContentsOfURL:[[NSBundle mainBundle] URLForResource:@"test" withExtension:@"pdf" subdirectory:@"TestWebKitAPI.resources"]];
+    auto response = adoptNS([[NSURLResponse alloc] initWithURL:fakeURL.get() MIMEType:@"application/pdf" expectedContentLength:[pdfData length] textEncodingName:nil]);
+    [webView loadSimulatedRequest:[NSURLRequest requestWithURL:fakeURL.get()] response:response.get() responseData:pdfData.get()];
+    [delegate waitForDidFinishNavigation];
+
+    [webView goBack];
+    [delegate waitForDidFinishNavigation];
+    [webView waitForNextPresentationUpdate];
+
+    EXPECT_TRUE([[webView objectByEvaluatingJavaScript:@"internals.isPageActive()"] boolValue]);
+}
+
+#endif // HAVE(PDFKIT)
 
 } // namespace TestWebKitAPI
 
